--- a/portal/portal/templates/nuevaPeticion.html
+++ b/portal/portal/templates/nuevaPeticion.html
@@ -17,7 +17,7 @@
    </div>
    <div class="txt-tittle">
 {% ifequal tipo "1" %}
-        <h1> <strong>Mensaje anonimo</strong><br><small> <strong>Indicanos a quien quieres enviar el mensaje</strong></small></h1>
+        <h1> <strong>Mensaje anónimo</strong><br><small> <strong>Indicanos a quien quieres enviar el mensaje</strong></small></h1>
 {% endifequal %}
 {% ifequal tipo "2" %}
 <h1> <strong>Conecta</strong><br><small> <strong>Indicanos a quien quieres enviar el mensaje</strong></small></h1>
@@ -46,7 +46,7 @@
         <div class="form-group">
             <div class="col-xl-12">
 
-                    <select id="example-select2" name="mensaje_anonimo" class="select-select2 form-control input-lg" style="width: 100%;" data-placeholder="Elige mensaje anonimo">
+                    <select id="example-select2" name="mensaje_anonimo" class="select-select2 form-control input-lg" style="width: 100%;" data-placeholder="Elige mensaje anónimo">
                         <option></option><!-- Required for data-placeholder attribute to work with Select2 plugin -->
                         <option value="1" {% ifequal datos.mensaje_anonimo "1" %} selected {%endifequal%}>Te conozco desde hace tiempo y quiero conocerte mejor.</option>
                         <option value="2" {% ifequal datos.mensaje_anonimo "2" %} selected {%endifequal%}>Nos conocemos desde hace poco, pero no puedo olvidarte.</option>
@@ -64,7 +64,7 @@
         <div class="form-group">
             <div class="col-xl-12">
 
-                    <select id="example-select2" name="mensaje_anonimo" class="select-select2 form-control input-lg" style="width: 100%;" data-placeholder="Elige mensaje anonimo">
+                    <select id="example-select2" name="mensaje_anonimo" class="select-select2 form-control input-lg" style="width: 100%;" data-placeholder="Elige mensaje anónimo">
                         <option></option><!-- Required for data-placeholder attribute to work with Select2 plugin -->
                         <option value="1" {% ifequal datos.mensaje_anonimo "1" %} selected {%endifequal%}>Trabajo con vosotros y creo que deberíais conoceros mejor.</option>
                         <option value="2" {% ifequal datos.mensaje_anonimo "2" %} selected {%endifequal%}>Os he visto muchas veces, se que haceis buena pareja.</option>
@@ -80,7 +80,7 @@
         <div class="form-group">
             <div class="col-xs-12">
                 <div class="input-group">
-                    <span class="input-group-addon">Nombre</span>
+                    <span class="input-group-addon">Nombre:</span>
                     <input type="text"  name="nombre" class="form-control input-lg" placeholder="Nombre" value="{{datos.nombre}}">
                 </div>
             </div>
@@ -89,7 +89,7 @@
         <div class="form-group">
             <div class="col-xs-12">
                 <div class="input-group">
-                    <span class="input-group-addon">Telefono</span>
+                    <span class="input-group-addon">Telefono:</span>
                     <input type="text"  name="telefono" class="form-control input-lg" placeholder="Telefono" value="{{datos.telefono}}">
                 </div>
             </div>
@@ -97,7 +97,7 @@
         <div class="form-group">
             <div class="col-xs-12">
                 <div class="input-group">
-                    <span class="input-group-addon">Email</span>
+                    <span class="input-group-addon">Email:</span>
                     <input type="text"  name="email" class="form-control input-lg" placeholder="Email" value="{{datos.email}}">
                 </div>
             </div>
@@ -106,7 +106,7 @@
         <div class="form-group">
             <div class="col-xs-12">
                 <div class="input-group">
-                    <span class="input-group-addon">Nombre segundo contacto</span>
+                    <span class="input-group-addon">Nombre segundo contacto:</span>
                     <input type="text"  name="nombre2" class="form-control input-lg" placeholder="Nombre" value="{{datos.nombre2}}">
                 </div>
             </div>
@@ -115,7 +115,7 @@
         <div class="form-group">
             <div class="col-xs-12">
                 <div class="input-group">
-                    <span class="input-group-addon">Telefono</span>
+                    <span class="input-group-addon">Telefono:</span>
                     <input type="text"  name="telefono2" class="form-control input-lg" placeholder="Telefono" value="{{datos.telefono2}}">
                 </div>
             </div>
@@ -123,7 +123,7 @@
         <div class="form-group">
             <div class="col-xs-12">
                 <div class="input-group">
-                    <span class="input-group-addon">Email</span>
+                    <span class="input-group-addon">Email:</span>
                     <input type="text"  name="email2" class="form-control input-lg" placeholder="Email" value="{{datos.email2}}">
                 </div>
             </div>
@@ -134,7 +134,7 @@
         <div class="form-group">
             <div class="col-xs-12">
                 <div class="input-group">
-                    <span class="input-group-addon">Mensaje</span>
+                    <span class="input-group-addon">Mensaje:</span>
                     <textarea name="mensaje" class="form-control input-lg" placeholder="Mensaje">{{datos.mensaje}}</textarea>
                 </div>
             </div>
