--- a/portal/portal/templates/peticion.html
+++ b/portal/portal/templates/peticion.html
@@ -15,30 +15,23 @@
     <form action="" method="post" id="form-login" class="form-horizontal form-bordered form-control-borderless">
         <div class="form-group">
             <div class="col-xs-12">
-                <div class="input-group">
-
+                <div class="enviado">
+<h1>
                      {{peticion.mensaje_anonimo}}
-
+</h1>
                 </div>
             </div>
         </div>
         <div class="form-group">
-            <div class="col-xs-4">
-                <div class="input-group">
+            <div class="col-xs-12">
                     <a href="peticionPrivado?peticion={{peticion.codigo}}" class="btn btn-sm btn-primary"></i> Ver menaje privado</a><br>
-                </div>
             </div>
-            <div class="col-xs-4">
-                <div class="input-group">
+            <div class="col-xs-12">
                     <a href="rechazarContactoPeticion?peticion={{peticion.codigo}}" class="btn btn-sm btn-primary"></i> Rechazar Contacto</a><br>
-                </div>
             </div>
-            <div class="col-xs-4">
-                <div class="input-group">
+            <div class="col-xs-12">
                     <a href="rechazarZiipPeticion?peticion={{peticion.codigo}}" class="btn btn-sm btn-primary"></i> Rechazar todos los mensajes de Ziip</a>
-                </div>
             </div>
-
 
         </div>
 
