--- a/portal/portal/templates/peticionPrivado.html
+++ b/portal/portal/templates/peticionPrivado.html
@@ -16,7 +16,7 @@
     <form action="" method="post" id="form-login" class="form-horizontal form-bordered form-control-borderless">
         <div class="form-group">
             <div class="col-xs-12">
-                <div class="input-group">
+                <div class="enviado">
                     <h1>{{peticion.mensaje_anonimo}}</h1>
                     {{peticion.mensaje}}
 
